# TidaLuna

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  deny.toml  shell.nix  tidalunar.exe.manifest
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
frontend/: esbuild.config.ts  package.json
frontend/plugins/dev/: package.json
frontend/plugins/dev/src/: Settings.tsx  index.ts  interceptActions.ts  ipc.ts
frontend/plugins/lib.native/src/: index.native.ts
frontend/plugins/lib/src/: ipc.ts
frontend/plugins/lib/src/classes/: StyleTag.ts
frontend/plugins/lib/src/classes/MediaItem/: MediaItem.download.native.ts  MediaItem.tags.ts  MediaItem.ts  parseStreamFormat.native.ts
frontend/plugins/lib/src/classes/TidalApi/: index.ts
frontend/plugins/lib/src/helpers/: getCredentials.ts  getPlaybackInfo.dasha.native.ts  getPlaybackInfo.ts
frontend/plugins/lib/src/redux/: actions.ts  store.ts
frontend/plugins/ui/: build.mjs  package.json
frontend/plugins/ui/src/: index.tsx
frontend/plugins/ui/src/SettingsPage/: Storage.tsx
frontend/plugins/ui/src/SettingsPage/PluginStoreTab/: InstallFromUrl.tsx  LunaStorePlugin.tsx  index.tsx  pluginInstall.ts  storeState.ts
frontend/plugins/ui/src/SettingsPage/PluginsTab/: LunaPluginHeader.tsx  LunaPluginSettings.tsx  index.tsx
frontend/plugins/ui/src/SettingsPage/SettingsTab/: index.tsx  (+6 more)
frontend/plugins/ui/src/components/: LunaAuthor.tsx  UpdateToast.tsx
frontend/plugins/ui/src/types/: updater.ts
frontend/render/src/: LunaPlugin.ts  exposeTidalInternals.patchAction.ts  exposeTidalInternals.ts  index.ts  modules.ts  window.core.ts
frontend/render/src/helpers/: findModule.ts
frontend/render/src/trace/: Messager.ts
frontend/scripts/: build-bundle.mjs  build-luna-dev.mjs  build-luna-modules.mjs  build-luna-ui.mjs  native-host.cjs
frontend/src/: audio-proxy.ts  bootstrap.ts  connect.ts  index.ts  ipc.ts  types.ts
frontend/src/connect/: controller.ts  index.ts  middleware.ts  receiver.ts  types.ts
frontend/src/controllers/: application.ts  audio.ts  mediasession.ts  navigation.ts  playback.ts  player.ts  session.ts  settings.ts  window.ts
frontend/src/luna-core/: LunaPlugin.ts  exposeTidalInternals.patchAction.ts  exposeTidalInternals.ts  index.ts  modules.ts
frontend/src/luna-core/helpers/: findCreateAction.ts  findModule.ts
frontend/src/luna-core/trace/: sanitizeData.ts
frontend/src/luna-lib/: index.ts  ipc.ts
frontend/src/luna-lib/classes/: StyleTag.ts
frontend/src/luna-lib/classes/MediaItem/: MediaItem.download.native.ts  MediaItem.ts  parseStreamFormat.native.ts
frontend/src/luna-lib/classes/TidalApi/: index.ts
frontend/src/luna-lib/helpers/: getCredentials.ts  getPlaybackInfo.dasha.native.ts  getPlaybackInfo.ts
frontend/src/luna-lib/redux/: actions.ts  store.ts
frontend/src/plugins/: context-menu.ts  core.ts  dom-observe.ts  ipc-bridge.ts  lib-classes.ts  loader.ts  luna-dev-inline.ts  luna-plugin.ts  luna-ui-inline.ts  reactive-store.ts  redux-patch.ts  semaphore.ts  signal.ts
frontend/src/quickjs-overrides/: exposeTidalInternals.ts  loadingContainer.ts  modules.ts  window.core.ts
frontend/src/quickjs-stubs/: idb-keyval.mjs  react-dom-client.mjs  react-jsx-runtime.mjs  react.mjs
frontend/src/ui/: window-controls.ts
native/: injector.ts  preload.ts  update.ts
native/NativeModule/: index.ts
plugins/lib.native/src/: native.ts
render/src/: LunaPlugin.ts
scripts/: check-panic-profile.sh  sign-manifest.py
src/: api_ipc.rs  app_state.rs  auth.rs  bandwidth.rs  bridge.rs  db.rs  decrypt.rs  exclusive_wasapi.rs  flac_meta.rs  logging.rs  main.rs  media_controls.rs  metadata.rs  player.rs  preload.rs  settings.rs  state.rs  streaming_buffer.rs  updater.rs  window.rs
src/api/: album.rs  artist.rs  client.rs  content.rs  mod.rs  playlist.rs  tags.rs  track.rs
src/api/types/: album.rs  artist.rs  lyrics.rs  mod.rs  openapi.rs  playback.rs  playlist.rs  quality.rs  track.rs
src/audio/: bandwidth.rs  decrypt.rs  flac_meta.rs  mod.rs  preload.rs
src/connect/: PROTOCOL.md  bridge.rs  consts.rs  ipc.rs  mod.rs  runtime.rs  testing.rs  token_state.rs  types.rs
src/connect/controller/: mod.rs  session.rs
src/connect/ipc/: controller.rs  helpers.rs  mod.rs  playback.rs  queue.rs  receiver.rs  state.rs
src/connect/mdns/: advertiser.rs  backend.rs  browser.rs  mod.rs
src/connect/receiver/: client_comm.rs  mod.rs  playback.rs  queue.rs  session.rs  speaker_bridge.rs
src/connect/receiver/queue/: commands.rs  error.rs  http.rs  media.rs  mod.rs
src/connect/types/: auth.rs  device.rs  media.rs  mod.rs  playback.rs  queue.rs  session.rs
src/connect/ws/: client.rs  heartbeat.rs  mod.rs  pending.rs  server.rs  tls.rs
src/connect/ws/certs/: README.md  tidal_root_ca.pem  tidal_server_cert.pem  tidal_ts_ca.pem
src/ipc/: mod.rs  player.rs  plugin.rs  window.rs
src/ipc/plugin/: jsrt.rs  mod.rs  native.rs  plugin_ipc.rs  proxy.rs
src/js_runtime/: bridge.rs  fetch.rs  loader.rs  mod.rs  plugin_runtime.rs  shims.rs  storage.rs  transpile.rs
src/native_runtime/: mod.rs  trust.rs
src/platform/: auth.rs  desktop_entry.rs  js_actions.rs  media_controls.rs  mod.rs  sdk_storage.rs  secure_store.rs  thumbbar.rs  tray.rs  volume_sync.rs  x11_class.rs
src/player/: buffer.rs  cache.rs  dash.rs  ipc.rs  mod.rs  resume.rs  thread.rs  wasapi.rs
src/player/thread/: commands.rs  decode.rs  device.rs  mod.rs  output.rs  playback.rs
src/plugins/: fetch.rs  manager.rs  mod.rs  store.rs  transpile.rs  wrapper.rs
src/ui/: app_bootstrap.rs  app_window.rs  client.rs  early_runtime.js  export_observer.js  flush.rs  handlers.rs  menu.rs  mod.rs  nav.rs  proactive_refresh.rs  token_filter.rs  trust_dialog.rs  window_delegate.rs
src/ui/early_runtime/: exfil_guard.js  fetch_proxy.js  ipc.js  native_trust_dialog.js  session_stub.js  token_capture.js  window_open.js
src/updater/: check.rs  download.rs  handlers.rs  mod.rs  recovery.rs  types.rs  util.rs
src/util/: fmt.rs  mod.rs
updater/: Cargo.toml  build.rs
updater/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
