[workspace]
members = ["xtask", "updater"]

[package]
name = "tidalunar"
version = "0.0.1-alpha"
edition = "2024"


[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


[dependencies]
cef = { version = "146.5.0", features = ["build-util"] }
tokio = { version = "1.51.0", features = [
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "macros",
  "process",
  "io-util",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
base16ct = { version = "1.0.0", features = ["alloc"] }
aes = "0.8.4"
aes-kw = "0.2.1"
cbc = "0.1.2"
ctr = "0.9.2"
hmac = "0.13.0"
pbkdf2 = "0.13.0-rc.10"
rusty-leveldb = "4.0.1"
sha2 = "0.11.0"
base64 = "0.22.1"
tracing = "0.1.44"
reqwest = { version = "0.13.2", default-features = false, features = [
  "stream",
  "blocking",
  "rustls",
  "http2",
  "cookies",
] }
futures-util = "0.3.32"
time = { version = "0.3.47", features = ["local-offset"] }
oauth2 = { version = "5.0.0", default-features = false }
cpal = "0.17.3"
rtrb = "0.3.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tempfile = "3.27.0"
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"
symphonia = { version = "0.5.5", features = ["flac", "aac", "isomp4"] }
dash-mpd = { version = "0.20.2", default-features = false }
souvlaki = "0.8.3"
oxc = { version = "0.123.0", features = ["semantic", "transformer", "codegen"] }
url = "2.5.8"
fnv = "1.0.7"
getrandom = "0.4.2"
tray-icon = { version = "0.22.0", default-features = false }
png = "0.18.1"
tokio-util = "0.7.18"
zip = { version = "8.5.0", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
  "Win32_Media_Audio",
  "Win32_Security_Cryptography",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
] }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_Registry",
  "Win32_System_Com",
  "Win32_System_Console",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
  "linux-native-sync-persistent",
  "crypto-rust",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
