[workspace]
members = ["xtask", "updater"]

[workspace.dependencies]
anyhow = "1.0.102"
base16ct = { version = "1.0.0", features = ["alloc"] }
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
getrandom = "0.4.2"
reqwest = { version = "0.13.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
zip = { version = "8.5.1", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }

[package]
name = "tidalunar"
version = "0.0.3-alpha"
edition = "2024"


[profile.dev]
# Required for src/connect/runtime.rs TaskGroup to report panics via JoinError::into_panic.
# Verified at compile-time via `const _: () = assert!(cfg!(panic = "unwind"))` in runtime.rs.
panic = "unwind"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true


[dependencies]
aes = "0.9.0"
aes-kw = "0.3.0"
anyhow = { workspace = true }
audioadapter-buffers = "3.0.0"
base16ct = { workspace = true }
base64 = { workspace = true }
cbc = "0.2.0"
cef = { version = "146.5.0", features = ["build-util"] }
cpal = "0.17.3"
ctr = "0.10.0"
dash-mpd = { version = "0.20.2", default-features = false }
fnv = "1.0.7"
futures-util = "0.3.32"
getrandom = { workspace = true }
hmac = "0.13.0"
oauth2 = { version = "5.0.0", default-features = false }
oxc = { version = "0.126.0", features = ["semantic", "transformer", "codegen"] }
pbkdf2 = "0.13.0-rc.10"
png = "0.18.1"
reqwest = { workspace = true, features = [
  "stream",
  "blocking",
  "rustls",
  "http2",
  "cookies",
  "json",
  "form",
] }
rtrb = "0.3.3"
rubato = "2.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

rusty-leveldb = "4.0.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
souvlaki = "0.8.3"
symphonia = { version = "0.5.5", features = ["flac", "aac", "isomp4"] }
tempfile = "3.27.0"
time = { version = "0.3.47", features = ["local-offset"] }
tokio = { version = "1.52.0", features = [
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "macros",
  "process",
  "io-util",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tray-icon = { version = "0.22.0", default-features = false }
url = "2.5.8"
zip = { workspace = true }

# TIDAL Connect
arc-swap = "1.9.1"
async-trait = "0.1.89"
gethostname = "1.1.0"
md-5 = "0.11.0"
mdns-sd = "0.19.0"
rustls = "0.23.38"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-native-roots",
] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"
windows = { version = "0.62.2", features = [
  "Win32_Media_Audio",
  "Win32_Security_Cryptography",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.62.2"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
  "crypto-rust",
  "linux-native-sync-persistent",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json", "redactions"] }
proptest = "1.11.0"
