[package]
name = "updater"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }
