[package]
name = "updater"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
  "blocking",
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
zip = { version = "8.5.0", default-features = false, features = [
  "deflate-flate2-zlib-rs",
] }
base16ct = { version = "1.0.0", features = ["alloc"] }
anyhow = "1.0.102"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }
