[package]
name = "updater"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
base16ct = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
