[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base16ct = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
